Mencoba membuat header

--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 </head>
 <body>
     <header>
-        <div class="judul">
-        <h1>CultureWir</h1>
-    </div>
+        <h1 class="header">CultureWir</h1>
+        <nav>
+            <ul> <a href="#">About Us</a></ul>
+            <ul> <a href="#">Help</a></ul>
+            <ul> <a href="#">Contact</a></ul>
+        </nav>
     </header>
 </body>
 </html>
