--- a/index.html
+++ b/index.html
@@ -10,10 +10,35 @@
     <header>
         <h1 class="header">CultureWir</h1>
         <nav>
-            <ul> <a href="#">About Us</a></ul>
-            <ul> <a href="#">Help</a></ul>
-            <ul> <a href="#">Contact</a></ul>
+            <ul>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Help</a></li>
+            </ul>
         </nav>
     </header>
+    <main>
+        <section>
+            <div class="CultureWir">
+                <h2>About Culture Wir</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta deleniti sequi similique voluptas consectetur nihil sunt doloremque dolor amet natus, neque maxime ipsa porro reiciendis molestiae voluptates maiores optio distinctio.</p>
+            </div>
+        </section>
+        <section>
+            <div class="container">
+                <img src="" alt="Jawa Barat" class="Jbr">
+                <img src="" alt="Jawa Tengah" class="jtg">
+                <img src="" alt="Jawa Timur" class="jtm">
+            </div>
+        </section>
+        <footer>
+            © 2021 CultureWir | All rights reserved
+        </footer>
+    </main>
+
+
+    </main>
+    
+        
 </body>
 </html>
