Membuat halaman jawa tengah

--- a/jateng.html
+++ b/jateng.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jawa Timur</title>
-    <link rel="stylesheet" href="style1.css">
+    <title>Jawa Tengah</title>
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body>
     <div class="container">
@@ -48,6 +48,6 @@
             <img src="" alt="Logo Kota">
         </div>
     </section>
-<script src="script.js"></script>
+<script src="script2.js"></script>
 </body>
 </html>
