Menambahkan gambar untuk halaman jateng dan memberikan source code untuk halaman jateng

--- a/jateng.html
+++ b/jateng.html
@@ -38,9 +38,9 @@
     <section class="kota-dan-logo">
         <div class="kota">
             <ol class="kotajatim">
-                <li data-city="Surabaya"><a href="#">Surabaya</a></li>
-                <li data-city="Malang"><a href="#">Malang</a></li>
-                <li data-city="Kediri"><a href="#">Kediri</a></li>
+                <li data-city="Yogyakarta"><a href="#">Yogyakarta</a></li>
+                <li data-city="Semarang"><a href="#">Semarang</a></li>
+                <li data-city="Solo"><a href="#">Solo</a></li>
                 <!-- Tambahkan daftar kota lain di sini -->
             </ol>
         </div>
