--- a/halaman2.html
+++ b/halaman2.html
@@ -8,25 +8,34 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="brand">CultureWir</h1>
+        <div class="left-content">
+            <img src="WhatsApp Image 2023-11-18 at 14.34.45.jpeg" alt="CultureWir">
+            <h1 class="brand">CultureWir</h1>
+        </div>
         <nav>
             <ul class="menu">
                 <li>
-                    <a href="#">Jawa Barat</a>
+                    <div class="nav">
+                        <a href="#">Jawa Barat</a>
+                    </div>
                     <ul>
                         <li><a href="#">Bandung</a></li>
                         <li><a href="#">Bogor</a></li>
                     </ul>
                 </li>
                 <li>
-                    <a href="#">Jawa Tengah</a>
+                    <div class="nav">
+                        <a href="#">Jawa Tengah</a>
+                    </div>
                     <ul>
                         <li><a href="#">Semarang</a></li>
                         <li><a href="#">Surakarta</a></li>
                     </ul>
                 </li>
                 <li>
-                    <a href="#">Jawa Timur</a>
+                    <div class="nav">
+                        <a href="#">Jawa Timur</a>
+                    </div>
                     <ul>
                         <li><a href="#">Surabaya</a></li>
                         <li><a href="#">Malang</a></li>
