--- a/jateng.html
+++ b/jateng.html
@@ -8,25 +8,34 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="brand">CultureWir</h1>
+        <div class="left-content">
+            <img src="assets/WhatsApp Image 2023-11-18 at 14.34.45.jpeg" alt="CultureWir">
+            <h1 class="brand">CultureWir</h1>
+        </div>
         <nav>
             <ul class="menu">
                 <li>
-                    <a href="#">Jawa Barat</a>
+                    <div class="nav">
+                        <a href="#">Jawa Barat</a>
+                    </div>
                     <ul>
                         <li><a href="#">Bandung</a></li>
                         <li><a href="#">Bogor</a></li>
                     </ul>
                 </li>
                 <li>
-                    <a href="#">Jawa Tengah</a>
+                    <div class="nav">
+                        <a href="#">Jawa Tengah</a>
+                    </div>
                     <ul>
+                        <li><a href="#">Yogyakarta</a></li>
                         <li><a href="#">Semarang</a></li>
-                        <li><a href="#">Surakarta</a></li>
                     </ul>
                 </li>
                 <li>
-                    <a href="#">Jawa Timur</a>
+                    <div class="nav">
+                        <a href="#">Jawa Timur</a>
+                    </div>
                     <ul>
                         <li><a href="#">Surabaya</a></li>
                         <li><a href="#">Malang</a></li>
@@ -37,7 +46,7 @@
     </div>
     <section class="kota-dan-logo">
         <div class="kota">
-            <ol class="kotajatim">
+            <ol class="kotajateng">
                 <li data-city="Yogyakarta"><a href="#">Yogyakarta</a></li>
                 <li data-city="Semarang"><a href="#">Semarang</a></li>
                 <li data-city="Solo"><a href="#">Solo</a></li>
