--- a/halaman2.html
+++ b/halaman2.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="left-content">
-            <img src="WhatsApp Image 2023-11-18 at 14.34.45.jpeg" alt="CultureWir">
+            <img src="assets/WhatsApp Image 2023-11-18 at 14.34.45.jpeg" alt="CultureWir">
             <h1 class="brand">CultureWir</h1>
         </div>
         <nav>
@@ -28,8 +28,8 @@
                         <a href="#">Jawa Tengah</a>
                     </div>
                     <ul>
+                        <li><a href="#">Yogyakarta</a></li>
                         <li><a href="#">Semarang</a></li>
-                        <li><a href="#">Surakarta</a></li>
                     </ul>
                 </li>
                 <li>
