Menambah asset dan menambah overflow pada list

--- a/halaman2.html
+++ b/halaman2.html
@@ -9,17 +9,29 @@
 <body>
     <div class="container">
         <div class="left-content">
-            <img src="assets/WhatsApp Image 2023-11-18 at 14.34.45.jpeg" alt="CultureWir">
+            <img src="assets/logo.png" alt="CultureWir">
             <h1 class="brand">CultureWir</h1>
         </div>
         <nav>
             <ul class="menu">
                 <li>
                     <div class="nav">
+                        <a href="#">Home</a>
+                    </div>
+                </li>
+                <li>
+                    <div class="nav">
                         <a href="#">Jawa Barat</a>
                     </div>
                     <ul>
                         <li><a href="#">Bandung</a></li>
+                        <li><a href="#">Bogor</a></li>
+                        <li><a href="#">Bogor</a></li>
+                        <li><a href="#">Bogor</a></li>
+                        <li><a href="#">Bogor</a></li>
+                        <li><a href="#">Bogor</a></li>
+                        <li><a href="#">Bogor</a></li>
+                        <li><a href="#">Bogor</a></li>
                         <li><a href="#">Bogor</a></li>
                     </ul>
                 </li>
@@ -47,9 +59,16 @@
     <section class="kota-dan-logo">
         <div class="kota">
             <ol class="kotajatim">
-                <li data-city="Surabaya"><a href="#">Surabaya</a></li>
-                <li data-city="Malang"><a href="#">Malang</a></li>
+                <li data-city="Banyuwangi"><a href="#">Banyuwangi</a></li>
+                <li data-city="Blitar"><a href="#">Blitar</a></li>
+                <li data-city="Gresik"><a href="#">Gresik</a></li>
+                <li data-city="Jember"><a href="#">Jember</a></li>
                 <li data-city="Kediri"><a href="#">Kediri</a></li>
+                <li data-city="Malang"><a href="#">Malang</a></li>
+                <li data-city="Pasuruan"><a href="#">Pasuruan</a></li>
+                <li data-city="Ponorogo"><a href="#">Ponorogo</a></li>
+                <li data-city="Sidoarjo"><a href="#">Sidoarjo</a></li>
+                <li data-city="Surabaya"><a href="#">Surabaya</a></li>
                 <!-- Tambahkan daftar kota lain di sini -->
             </ol>
         </div>
