--- a/jateng.html
+++ b/jateng.html
@@ -16,6 +16,11 @@
             <ul class="menu">
                 <li>
                     <div class="nav">
+                        <a href="#">Home</a>
+                    </div>
+                </li>
+                <li>
+                    <div class="nav">
                         <a href="#">Jawa Barat</a>
                     </div>
                     <ul>
