--- a/halaman2.html
+++ b/halaman2.html
@@ -25,14 +25,15 @@
                     </div>
                     <ul>
                         <li><a href="#">Bandung</a></li>
+                        <li><a href="#">Bekasi</a></li>
                         <li><a href="#">Bogor</a></li>
-                        <li><a href="#">Bogor</a></li>
-                        <li><a href="#">Bogor</a></li>
-                        <li><a href="#">Bogor</a></li>
-                        <li><a href="#">Bogor</a></li>
-                        <li><a href="#">Bogor</a></li>
-                        <li><a href="#">Bogor</a></li>
-                        <li><a href="#">Bogor</a></li>
+                        <li><a href="#">Cirebon</a></li>
+                        <li><a href="#">Depok</a></li>
+                        <li><a href="#">Indramayu</a></li>
+                        <li><a href="#">Pangandaran</a></li>
+                        <li><a href="#">Purwakarta</a></li>
+                        <li><a href="#">Sukabumi</a></li>
+                        <li><a href="#">Tasikmalaya</a></li>
                     </ul>
                 </li>
                 <li>
@@ -40,8 +41,16 @@
                         <a href="#">Jawa Tengah</a>
                     </div>
                     <ul>
-                        <li><a href="#">Yogyakarta</a></li>
+                        <li><a href="#">Demak</a></li>
+                        <li><a href="#">Klaten</a></li>
+                        <li><a href="#">Magelang</a></li>
+                        <li><a href="#">Salatiga</a></li>
                         <li><a href="#">Semarang</a></li>
+                        <li><a href="#">Solo</a></li>
+                        <li><a href="#">Sragen</a></li>
+                        <li><a href="#">Surakarta</a></li>
+                        <li><a href="#">Tegal</a></li>
+                        <li><a href="#">Yogyakarta</a></li>
                     </ul>
                 </li>
                 <li>
@@ -49,8 +58,16 @@
                         <a href="#">Jawa Timur</a>
                     </div>
                     <ul>
-                        <li><a href="#">Surabaya</a></li>
+                        <li><a href="#">Banyuwangi</a></li>
+                        <li><a href="#">Blitar</a></li>
+                        <li><a href="#">Gresik</a></li>
+                        <li><a href="#">Jember</a></li>
+                        <li><a href="#">Kediri</a></li>
                         <li><a href="#">Malang</a></li>
+                        <li><a href="#">Pasuruan</a></li>
+                        <li><a href="#">Ponorogo</a></li>
+                        <li><a href="#">Sidoarjo</a></li>
+                        <li><a href="#">Surabaya</a></li>
                     </ul>
                 </li>
             </ul>
