Melakukan styling final pada halaman web

--- a/halaman2.html
+++ b/halaman2.html
@@ -8,91 +8,93 @@
 </head>
 <body>
     <div class="container">
-        <div class="left-content">
-            <img src="assets/logo.png" alt="CultureWir">
-            <h1 class="brand">CultureWir</h1>
+        <div class="header">
+            <div class="left-content">
+                <img src="assets/logo.png" alt="CultureWir">
+                <h1 class="brand">CultureWir</h1>
+            </div>
+            <nav>
+                <ul class="menu">
+                    <li>
+                        <div class="nav">
+                            <a href="#">Home</a>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="nav">
+                            <a href="#">Jawa Barat</a>
+                        </div>
+                        <ul>
+                            <li><a href="#">Bandung</a></li>
+                            <li><a href="#">Bekasi</a></li>
+                            <li><a href="#">Bogor</a></li>
+                            <li><a href="#">Cirebon</a></li>
+                            <li><a href="#">Depok</a></li>
+                            <li><a href="#">Indramayu</a></li>
+                            <li><a href="#">Pangandaran</a></li>
+                            <li><a href="#">Purwakarta</a></li>
+                            <li><a href="#">Sukabumi</a></li>
+                            <li><a href="#">Tasikmalaya</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <div class="nav">
+                            <a href="#">Jawa Tengah</a>
+                        </div>
+                        <ul>
+                            <li><a href="#">Demak</a></li>
+                            <li><a href="#">Klaten</a></li>
+                            <li><a href="#">Magelang</a></li>
+                            <li><a href="#">Salatiga</a></li>
+                            <li><a href="#">Semarang</a></li>
+                            <li><a href="#">Solo</a></li>
+                            <li><a href="#">Sragen</a></li>
+                            <li><a href="#">Surakarta</a></li>
+                            <li><a href="#">Tegal</a></li>
+                            <li><a href="#">Yogyakarta</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <div class="nav">
+                            <a href="#">Jawa Timur</a>
+                        </div>
+                        <ul>
+                            <li><a href="#">Banyuwangi</a></li>
+                            <li><a href="#">Blitar</a></li>
+                            <li><a href="#">Gresik</a></li>
+                            <li><a href="#">Jember</a></li>
+                            <li><a href="#">Kediri</a></li>
+                            <li><a href="#">Malang</a></li>
+                            <li><a href="#">Pasuruan</a></li>
+                            <li><a href="#">Ponorogo</a></li>
+                            <li><a href="#">Sidoarjo</a></li>
+                            <li><a href="#">Surabaya</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
         </div>
-        <nav>
-            <ul class="menu">
-                <li>
-                    <div class="nav">
-                        <a href="#">Home</a>
-                    </div>
-                </li>
-                <li>
-                    <div class="nav">
-                        <a href="#">Jawa Barat</a>
-                    </div>
-                    <ul>
-                        <li><a href="#">Bandung</a></li>
-                        <li><a href="#">Bekasi</a></li>
-                        <li><a href="#">Bogor</a></li>
-                        <li><a href="#">Cirebon</a></li>
-                        <li><a href="#">Depok</a></li>
-                        <li><a href="#">Indramayu</a></li>
-                        <li><a href="#">Pangandaran</a></li>
-                        <li><a href="#">Purwakarta</a></li>
-                        <li><a href="#">Sukabumi</a></li>
-                        <li><a href="#">Tasikmalaya</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <div class="nav">
-                        <a href="#">Jawa Tengah</a>
-                    </div>
-                    <ul>
-                        <li><a href="#">Demak</a></li>
-                        <li><a href="#">Klaten</a></li>
-                        <li><a href="#">Magelang</a></li>
-                        <li><a href="#">Salatiga</a></li>
-                        <li><a href="#">Semarang</a></li>
-                        <li><a href="#">Solo</a></li>
-                        <li><a href="#">Sragen</a></li>
-                        <li><a href="#">Surakarta</a></li>
-                        <li><a href="#">Tegal</a></li>
-                        <li><a href="#">Yogyakarta</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <div class="nav">
-                        <a href="#">Jawa Timur</a>
-                    </div>
-                    <ul>
-                        <li><a href="#">Banyuwangi</a></li>
-                        <li><a href="#">Blitar</a></li>
-                        <li><a href="#">Gresik</a></li>
-                        <li><a href="#">Jember</a></li>
-                        <li><a href="#">Kediri</a></li>
-                        <li><a href="#">Malang</a></li>
-                        <li><a href="#">Pasuruan</a></li>
-                        <li><a href="#">Ponorogo</a></li>
-                        <li><a href="#">Sidoarjo</a></li>
-                        <li><a href="#">Surabaya</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </nav>
+        <section class="kota-dan-logo">
+            <div class="kota">
+                <ol class="kotajatim">
+                    <li data-city="Banyuwangi"><a href="#">Banyuwangi</a></li>
+                    <li data-city="Blitar"><a href="#">Blitar</a></li>
+                    <li data-city="Gresik"><a href="#">Gresik</a></li>
+                    <li data-city="Jember"><a href="#">Jember</a></li>
+                    <li data-city="Kediri"><a href="#">Kediri</a></li>
+                    <li data-city="Malang"><a href="#">Malang</a></li>
+                    <li data-city="Pasuruan"><a href="#">Pasuruan</a></li>
+                    <li data-city="Ponorogo"><a href="#">Ponorogo</a></li>
+                    <li data-city="Sidoarjo"><a href="#">Sidoarjo</a></li>
+                    <li data-city="Surabaya"><a href="#">Surabaya</a></li>
+                    <!-- Tambahkan daftar kota lain di sini -->
+                </ol>
+            </div>
+            <div class="logo">
+                <img src="" alt="Logo Kota">
+            </div>
+        </section>
     </div>
-    <section class="kota-dan-logo">
-        <div class="kota">
-            <ol class="kotajatim">
-                <li data-city="Banyuwangi"><a href="#">Banyuwangi</a></li>
-                <li data-city="Blitar"><a href="#">Blitar</a></li>
-                <li data-city="Gresik"><a href="#">Gresik</a></li>
-                <li data-city="Jember"><a href="#">Jember</a></li>
-                <li data-city="Kediri"><a href="#">Kediri</a></li>
-                <li data-city="Malang"><a href="#">Malang</a></li>
-                <li data-city="Pasuruan"><a href="#">Pasuruan</a></li>
-                <li data-city="Ponorogo"><a href="#">Ponorogo</a></li>
-                <li data-city="Sidoarjo"><a href="#">Sidoarjo</a></li>
-                <li data-city="Surabaya"><a href="#">Surabaya</a></li>
-                <!-- Tambahkan daftar kota lain di sini -->
-            </ol>
-        </div>
-        <div class="logo">
-            <img src="" alt="Logo Kota">
-        </div>
-    </section>
 <script src="script.js"></script>
 </body>
 </html>
