Menambahkan page untuk jabar dan assets untuk jabar

--- a/jabar.html
+++ b/jabar.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jawa Tengah</title>
-    <link rel="stylesheet" href="style2.css">
+    <title>Jawa Barat</title>
+    <link rel="stylesheet" href="style3.css">
 </head>
 <body>
     <div class="container">
@@ -77,16 +77,16 @@
         <section class="kota-dan-logo">
             <div class="kota">
                 <ol class="kotajateng">
-                    <li data-city="Demak"><a href="#">Demak</a></li>
-                    <li data-city="Jepara"><a href="#">Jepara</a></li>
-                    <li data-city="Klaten"><a href="#">Klaten</a></li>
-                    <li data-city="Magelang"><a href="#">Magelang</a></li>
-                    <li data-city="Salatiga"><a href="#">Salatiga</a></li>
-                    <li data-city="Semarang"><a href="#">Semarang</a></li>
-                    <li data-city="Solo"><a href="#">Solo</a></li>
-                    <li data-city="Sragen"><a href="#">Sragen</a></li>
-                    <li data-city="Surakarta"><a href="#">Surakarta</a></li>
-                    <li data-city="Tegal"><a href="#">Tegal</a></li>
+                    <li data-city="Bandung"><a href="#">Bandung</a></li>
+                    <li data-city="Bekasi"><a href="#">Bekasi</a></li>
+                    <li data-city="Bogor"><a href="#">Bogor</a></li>
+                    <li data-city="Cirebon"><a href="#">Cirebon</a></li>
+                    <li data-city="Depok"><a href="#">Depok</a></li>
+                    <li data-city="Indramayu"><a href="#">Indramayu</a></li>
+                    <li data-city="Pangandaran"><a href="#">Pangandaran</a></li>
+                    <li data-city="Purwakarta"><a href="#">Purwakarta</a></li>
+                    <li data-city="Sukabumi"><a href="#">Sukabumi</a></li>
+                    <li data-city="Tasikmalaya"><a href="#">Tasikmalaya</a></li>
                     <!-- Tambahkan daftar kota lain di sini -->
                 </ol>
             </div>
@@ -95,6 +95,6 @@
             </div>
         </section>
     </div>
-<script src="script2.js"></script>
+<script src="script3.js"></script>
 </body>
 </html>
