--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <div class="bg">
       <div class="jabar">
-        <a class="jb" href="homepage.html">
+        <a class="jb" href="jabar.html">
           <img class="jbr" src="jabar.png" alt="logo jabar" />
           <h1 class="jb">Jawa Barat</h1>
           <p class="descjbr">
@@ -61,7 +61,7 @@
       </div>
 
       <div class="jateng">
-        <a class="jt" href="homepage.html">
+        <a class="jt" href="jateng.html">
           <img class="jtg" src="jateng.png" alt="logo jateng" />
           <h1 class="jt">Jawa Tengah</h1>
           <p class="descjtg">
@@ -73,7 +73,7 @@
       </div>
 
       <div class="jatim">
-        <a href="homepage.html">
+        <a href="halaman2.html">
           <img class="jtm" src="jatim.png" alt="logo jatim" />
           <h1 class="jm">Jawa Timur</h1>
           <p class="descjtm">
