--- a/jateng.html
+++ b/jateng.html
@@ -25,16 +25,16 @@
                             <a href="#">Jawa Barat</a>
                         </div>
                         <ul>
-                            <li><a href="#">Bandung</a></li>
-                            <li><a href="#">Bekasi</a></li>
-                            <li><a href="#">Bogor</a></li>
-                            <li><a href="#">Cirebon</a></li>
-                            <li><a href="#">Depok</a></li>
-                            <li><a href="#">Indramayu</a></li>
-                            <li><a href="#">Pangandaran</a></li>
-                            <li><a href="#">Purwakarta</a></li>
-                            <li><a href="#">Sukabumi</a></li>
-                            <li><a href="#">Tasikmalaya</a></li>
+                            <li><a href="kesenian_jabar.html">Bandung</a></li>
+                            <li><a href="kesenian_jabar.html">Bekasi</a></li>
+                            <li><a href="kesenian_jabar.html">Bogor</a></li>
+                            <li><a href="kesenian_jabar.html">Cirebon</a></li>
+                            <li><a href="kesenian_jabar.html">Depok</a></li>
+                            <li><a href="kesenian_jabar.html">Indramayu</a></li>
+                            <li><a href="kesenian_jabar.html">Pangandaran</a></li>
+                            <li><a href="kesenian_jabar.html">Purwakarta</a></li>
+                            <li><a href="kesenian_jabar.html">Sukabumi</a></li>
+                            <li><a href="kesenian_jabar.html">Tasikmalaya</a></li>
                         </ul>
                     </li>
                     <li>
@@ -42,16 +42,16 @@
                             <a href="#">Jawa Tengah</a>
                         </div>
                         <ul>
-                            <li><a href="#">Demak</a></li>
-                            <li><a href="#">Jepara</a></li>
-                            <li><a href="#">Klaten</a></li>
-                            <li><a href="#">Magelang</a></li>
-                            <li><a href="#">Salatiga</a></li>
-                            <li><a href="#">Semarang</a></li>
-                            <li><a href="#">Solo</a></li>
-                            <li><a href="#">Sragen</a></li>
-                            <li><a href="#">Surakarta</a></li>
-                            <li><a href="#">Tegal</a></li>
+                            <li><a href="kesenian_jateng.html">Demak</a></li>
+                            <li><a href="kesenian_jateng.html">Jepara</a></li>
+                            <li><a href="kesenian_jateng.html">Klaten</a></li>
+                            <li><a href="kesenian_jateng.html">Magelang</a></li>
+                            <li><a href="kesenian_jateng.html">Salatiga</a></li>
+                            <li><a href="kesenian_jateng.html">Semarang</a></li>
+                            <li><a href="kesenian_jateng.html">Solo</a></li>
+                            <li><a href="kesenian_jateng.html">Sragen</a></li>
+                            <li><a href="kesenian_jateng.html">Surakarta</a></li>
+                            <li><a href="kesenian_jateng.html">Tegal</a></li>
                         </ul>
                     </li>
                     <li>
@@ -59,16 +59,16 @@
                             <a href="#">Jawa Timur</a>
                         </div>
                         <ul>
-                            <li><a href="#">Banyuwangi</a></li>
-                            <li><a href="#">Blitar</a></li>
-                            <li><a href="#">Gresik</a></li>
-                            <li><a href="#">Jember</a></li>
-                            <li><a href="#">Kediri</a></li>
-                            <li><a href="#">Malang</a></li>
-                            <li><a href="#">Pasuruan</a></li>
-                            <li><a href="#">Ponorogo</a></li>
-                            <li><a href="#">Sidoarjo</a></li>
-                            <li><a href="#">Surabaya</a></li>
+                            <li><a href="kesenian_jatim.html">Banyuwangi</a></li>
+                            <li><a href="kesenian_jatim.html">Blitar</a></li>
+                            <li><a href="kesenian_jatim.html">Gresik</a></li>
+                            <li><a href="kesenian_jatim.html">Jember</a></li>
+                            <li><a href="kesenian_jatim.html">Kediri</a></li>
+                            <li><a href="kesenian_jatim.html">Malang</a></li>
+                            <li><a href="kesenian_jatim.html">Pasuruan</a></li>
+                            <li><a href="kesenian_jatim.html">Ponorogo</a></li>
+                            <li><a href="kesenian_jatim.html">Sidoarjo</a></li>
+                            <li><a href="kesenian_jatim.html">Surabaya</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -77,16 +77,16 @@
         <section class="kota-dan-logo">
             <div class="kota">
                 <ol class="kotajateng">
-                    <li data-city="Demak"><a href="#">Demak</a></li>
-                    <li data-city="Jepara"><a href="#">Jepara</a></li>
-                    <li data-city="Klaten"><a href="#">Klaten</a></li>
-                    <li data-city="Magelang"><a href="#">Magelang</a></li>
-                    <li data-city="Salatiga"><a href="#">Salatiga</a></li>
-                    <li data-city="Semarang"><a href="#">Semarang</a></li>
-                    <li data-city="Solo"><a href="#">Solo</a></li>
-                    <li data-city="Sragen"><a href="#">Sragen</a></li>
-                    <li data-city="Surakarta"><a href="#">Surakarta</a></li>
-                    <li data-city="Tegal"><a href="#">Tegal</a></li>
+                    <li data-city="Demak"><a href="kesenian_jateng.html">Demak</a></li>
+                    <li data-city="Jepara"><a href="kesenian_jateng.html">Jepara</a></li>
+                    <li data-city="Klaten"><a href="kesenian_jateng.html">Klaten</a></li>
+                    <li data-city="Magelang"><a href="kesenian_jateng.html">Magelang</a></li>
+                    <li data-city="Salatiga"><a href="kesenian_jateng.html">Salatiga</a></li>
+                    <li data-city="Semarang"><a href="kesenian_jateng.html">Semarang</a></li>
+                    <li data-city="Solo"><a href="kesenian_jateng.html">Solo</a></li>
+                    <li data-city="Sragen"><a href="kesenian_jateng.html">Sragen</a></li>
+                    <li data-city="Surakarta"><a href="kesenian_jateng.html">Surakarta</a></li>
+                    <li data-city="Tegal"><a href="kesenian_jateng.html">Tegal</a></li>
                     <!-- Tambahkan daftar kota lain di sini -->
                 </ol>
             </div>
