--- a/jabar.html
+++ b/jabar.html
@@ -17,7 +17,7 @@
                 <ul class="menu">
                     <li>
                         <div class="nav">
-                            <a href="#">Home</a>
+                            <a href="homepage.html">Home</a>
                         </div>
                     </li>
                     <li>
@@ -39,7 +39,7 @@
                     </li>
                     <li>
                         <div class="nav">
-                            <a href="#">Jawa Tengah</a>
+                            <a href="jateng.html">Jawa Tengah</a>
                         </div>
                         <ul>
                             <li><a href="kesenian_jateng.html">Demak</a></li>
@@ -56,7 +56,7 @@
                     </li>
                     <li>
                         <div class="nav">
-                            <a href="#">Jawa Timur</a>
+                            <a href="jatim.html">Jawa Timur</a>
                         </div>
                         <ul>
                             <li><a href="kesenian_jatim.html">Banyuwangi</a></li>
