--- a/jabar.html
+++ b/jabar.html
@@ -22,7 +22,7 @@
                     </li>
                     <li>
                         <div class="nav">
-                            <a href="#">Jawa Barat</a>
+                            <a href="jabar.html">Jawa Barat</a>
                         </div>
                         <ul>
                             <li><a href="kesenian_jabar.html">Bandung</a></li>
