--- a/jateng.html
+++ b/jateng.html
@@ -39,7 +39,7 @@
                     </li>
                     <li>
                         <div class="nav">
-                            <a href="#">Jawa Tengah</a>
+                            <a href="jateng.html">Jawa Tengah</a>
                         </div>
                         <ul>
                             <li><a href="kesenian_jateng.html">Demak</a></li>
