Menghapus # pada a dari jatim

--- a/jatim.html
+++ b/jatim.html
@@ -56,7 +56,7 @@
                     </li>
                     <li>
                         <div class="nav">
-                            <a href="#jatim.html">Jawa Timur</a>
+                            <a href="jatim.html">Jawa Timur</a>
                         </div>
                         <ul>
                             <li><a href="kesenian_jatim.html">Banyuwangi</a></li>
