--- a/jabar.html
+++ b/jabar.html
@@ -91,7 +91,7 @@
                 </ol>
             </div>
             <div class="logo">
-                <img src="jabar.jpeg" alt="Logo Kota">
+                <img src="" alt="Logo Kota">
             </div>
         </section>
     </div>
